<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YANR</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connected">connected</string>
    <string name="disconnected">disconnected&#8230;</string>
    <string name="grouplist">Group List </string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_groupsubscribe">Subscribe Group</string>
    <string name="title_activity_subscribe">All Groups</string>
    <string name="action_subscribe">Subscribe</string>
    <string name="action_refetch">Refetch Group List</string>
    <string name="db_path">/data/data/com.trx.yanr/databases/</string>
    <string name="title_activity_single_group_view">SingleGroupViewActivity</string>
    <string name="action_retrieve_articles">Retrieve New News</string>
    <string name="action_retrieve_all_articles">Retrieve All News</string>
    <string name="pleasewait">Please wait&#8230;</string>
    <string name="pleasewaitlong">Waiting for retrieving complete&#8230;</string>
    <string name="title_activity_news_view">News</string>
    <string name="pressagain">Press again to exit</string>
    <string name="rebuildtables">Clear all data</string>
    <string name="warning">Warning</string>
    <string name="rebuild_alert">Clear all data, continue?</string>
    <string name="action_refresh">Refresh</string>
    <string name="ic_settings_applications">Settings</string>
    <string name="title_activity_ServerSettingPrefActivity">Settings</string>
    <string name="action_addserver">Add Server</string>
    
    <string name="settings_serverssettingtitle">Server Settings</string>
    <string name="settings_serverssettingsummary">Edit server settings</string>
    <string name="settings_serverslisttitle">Server List</string>
    <string name="serveraddrdes">Server Address: </string>
    <string name="serveraddrhint">Input server address</string>
    <string name="serverportdes">Port: </string>
    <string name="serverporthint">Port number</string>
    <string name="logincheckboxdes">Server need login</string>
    <string name="serverusernamedes">User Name:</string>
    <string name="serverusernamehint">My username on server</string>
    <string name="serverpwddes">Password: </string>
    <string name="serverpwdhint">My password on server</string>
    <string name="mynickdes">My nick name: </string>
    <string name="mynickhint">Input nick name</string>
    <string name="myemaildes">Email:</string>
    <string name="myemailhint">Input email</string>
    <string name="myorgdes">Org (Optional): </string>
    <string name="myorghint">Input orgnization</string>
    <string name="myfacedes">Face (Optional): </string>
    <string name="myfacehint">Input Face string</string>  
    <string name="myxfacedes">X-Face (Optional): </string>
    <string name="myxfacehint">Input X-Face string</string>
    <string name="sslcheckboxdes">SSL required</string>
    <string name="action_save">Save</string>
    <string name="defaultserver">news.eternal-september.org</string>
    <!-- <string name="defaultserver">nntp.aioe.org</string>-->
    <string name="defaultport">119</string>
</resources>
